@@ -1,11 +1,9 @@
 MD5 158c6ce96436974bb0043e458288d408 enduser.pdf 1136567
 RMD160 a049cd535f8948e99ac0385f4d53a574d4a027be enduser.pdf 1136567
 SHA256 483818333b4d959d14fe7e5939843a68687fbe87657bf90f0b12230f18053b11 enduser.pdf 1136567
-MD5 9018fd0d43a2eeeef7cd8f47b35e3e54 lmgrd-amd64-9.5.Z 327568
-RMD160 f0bbd9ad2f25168c2e8283e48d2adee475b51ef3 lmgrd-amd64-9.5.Z 327568
-SHA256 49a5e24757502231295ec2c7ea23a770fe39642f0405fae3ba9715deee2ebfab lmgrd-amd64-9.5.Z 327568
-MD5 26fdf09f91bff59804e36641d1dbd1e6 lmgrd-x86-9.5.Z 318617
-MD5 42b18f5472b7a44972796163f1115c2f lmutil-amd64-9.5.Z 331103
-RMD160 9d5c753bca3ba83cbd01c8491c98b4c101ad5da2 lmutil-amd64-9.5.Z 331103
-SHA256 2af1934b02d4499324389fa4491bdcfd8d72cca431e804d05848827abfc85413 lmutil-amd64-9.5.Z 331103
-MD5 6d4f61b2ccfae6c6095d248aae18ec72 lmutil-x86-9.5.Z 324583
+MD5 26fdf09f91bff59804e36641d1dbd1e6 lmgrd.Z 318617
+RMD160 cad7633c20ed311b02ab79604b42332883e5b4a6 lmgrd.Z 318617
+SHA256 d79e1cc24ab8216c2d8252b90ac18ef771f0e89629f2f482a39fc77dd8f31523 lmgrd.Z 318617
+MD5 6d4f61b2ccfae6c6095d248aae18ec72 lmutil.Z 324583
+RMD160 50ef30b8971ad49d4da9aeac99ea0c041c41302e lmutil.Z 324583
+SHA256 8b3da0d810fd8071ab968c74c74cff2ba90ae7d1a38dbfce0fbd802253eac0e5 lmutil.Z 324583
