@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/flexlm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/flexlm/ChangeLog,v 1.11 2006/09/26 04:10:48 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/flexlm/ChangeLog,v 1.12 2006/12/19 23:33:08 kugelfang Exp $
+
+  19 Dec 2006; Danny van Dyk <kugelfang@gentoo.org> flexlm-9.5-r1.ebuild:
+  QA: Fixed licence, SRC_URI (unreliable host).
 
   26 Sep 2006; Jeremy Huddleston <eradicator@gentoo.org> files/flexlm-init:
   Use lmdown rather than killing processes.
